tests/snapshots/sfc/ts/script_setup__script_with_interfaces_before_script_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, toDisplayString as _toDisplayString } from "vue"

export interface User {
  id: number;
  name: string;
}
import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    const user = ref(null);
    const __returned__ = {
      ref,
      user
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return ($setup.user)
    ? (_openBlock(), _createElementBlock("div", {
      key: 0
    }, _toDisplayString($setup.user.name), 1 /* TEXT */))
    : _createCommentVNode("v-if", true)
}

__sfc__.render = render
export default __sfc__
