tests/snapshots/sfc/ts/script_setup__template_with_v_model_on_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelText as _vModelText } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const msg = ref('')

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", { "onUpdate:modelValue": $event => ((msg.value) = $event) }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [ [_vModelText, msg.value] ])
}
}

})
