tests/snapshots/sfc/ts/script_setup__top_level_await_with_destructuring.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createTextVNode as _createTextVNode, toDisplayString as _toDisplayString } from 'vue'
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const { data, error } = await useFetch('/api/data')
  const __returned__ = { data, error }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return ($setup.error)
    ? (_openBlock(), _createElementBlock("div", {
      key: 0
    }, [
      _createTextVNode("Error: "),
      _toDisplayString($setup.error)
    ]))
    : (_openBlock(), _createElementBlock("div", {
      key: 1
    }, _toDisplayString($setup.data), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
