tests/snapshots/sfc/ts/script_setup__v_else_if_chain_with_ref_bindings.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, createElementVNode as _createElementVNode, createCommentVNode as _createCommentVNode, normalizeClass as _normalizeClass } from "vue"

import { ref, computed } from 'vue';

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("h4", null, "AST")
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("h4", null, "Helpers")
const _hoisted_3 = /*#__PURE__*/ _createElementVNode("h4", null, "SFC")

export default defineComponent({
  name: 'test',
  setup(__props) {

const output = ref<{ code: string } | null>({ code: 'test' });
const activeTab = ref<'code' | 'ast' | 'helpers' | 'sfc'>('code');
const isTypeScript = computed(() => true);
const codeViewMode = ref<'ts' | 'js'>('ts');

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, [ (output.value) ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [ (activeTab.value === 'code') ? (_openBlock(), _createElementBlock("div", { key: 0, class: "code-output" }, [ (isTypeScript.value) ? (_openBlock(), _createElementBlock("div", { key: 0, class: "code-mode-toggle" }, [ _createElementVNode("button", { class: _normalizeClass(['btn', { active: codeViewMode.value === 'ts' }]), onClick: $event => (codeViewMode.value = 'ts') }, "TS", 10 /* CLASS, PROPS */), _createElementVNode("button", { class: _normalizeClass(['btn', { active: codeViewMode.value === 'js' }]), onClick: $event => (codeViewMode.value = 'js') }, "JS", 10 /* CLASS, PROPS */) ])) : _createCommentVNode("v-if", true) ])) : (activeTab.value === 'ast') ? (_openBlock(), _createElementBlock("div", { key: 1, class: "ast-output" }, [ _hoisted_1 ])) : (activeTab.value === 'helpers') ? (_openBlock(), _createElementBlock("div", { key: 2, class: "helpers-output" }, [ _hoisted_2 ])) : (activeTab.value === 'sfc') ? (_openBlock(), _createElementBlock("div", { key: 3, class: "sfc-output" }, [ _hoisted_3 ])) : _createCommentVNode("v-if", true) ], 64 /* STABLE_FRAGMENT */)) : _createCommentVNode("v-if", true) ]))
}
}

})
